--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 plugins {
+    id 'org.springframework.boot' version '3.3.1'
     id 'java'
     id 'eclipse'
     id 'idea'
 }
 
+apply plugin: 'io.spring.dependency-management'
+
 group = 'com.example.jdbc'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 22
 
 repositories {
     mavenCentral()
@@ -15,9 +17,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.1'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'com.h2database:h2'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
